

AC_INIT([BOM Extract], [0.1])
AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AM_PROG_CC_C_O

AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])

AC_CHECK_HEADERS([stdio.h])

AC_CONFIG_FILES([Makefile
                 src/common/Makefile
                 src/Makefile
                 ])

AC_OUTPUT
